# EBM-splats

./: .gitignore  AGENT_HEALTH.md  LICENSE  PGLF_ARCHITECTURE.md  README.md  SPECS_EVAL_EBM.md  add_ema.py  agent_monitor.py  autoresearch_eval.py  autoresearch_train.py  check_cuda.py  config.py  conftest.py  context_hierarchy.py  dataset_loader.py  dataset_utils.py  decoder.py  diagnose.py  diagnostic_launcher.py  ebm_data_test.txt  ebm_test_results.txt  energy.py  energy_cuda.py  evaluate.py  evaluation.py  exp2.txt  exp3.txt  exp4.txt  exp5.txt  exp6.txt  exp7.txt  exp_log.txt  final_diagnostic.py  generate.py  generate_samples.py  geometry.py  langevin.py  launch_training.py  logger.py  model.py  (+36 more)
benchmark_results/: report.txt
pglf/: __init__.py  contrastive_head.py  embedding_service.py  encoders.py  flow_matching.py  pareto_filter.py  service.py  trainer.py
shaders/: energy.comp  energy.spv
tests/: test_advanced.py  test_core.py  test_data_and_training.py
